Bug 319799 - kde-open fails to open multiple files
Summary: kde-open fails to open multiple files
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-13 19:29 UTC by Robert Strahl
Modified: 2013-06-04 03:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Strahl 2013-05-13 19:29:43 UTC
$ kde-open --help specifies that multiple urls can be specified, yet kde-open only opens the first.

Reproducible: Always

Steps to Reproduce:
$ kde-open file1 file2 file3
where file1, file2, and file3 are local files
Actual Results:  
Only file1 is opened. No output is given to indicate success or failure.

Expected Results:  
All specified files should be opened

There is no documentation for this command that I can find, outside of the brief help message. The web generally states that this command can be used to open files based on their mime-type. I assume I am using this command in the correct way.
Comment 1 Christoph Feck 2013-05-13 20:16:11 UTC
This looks like an error in the help message, probably caused by the fact that some kioclient commands (such as "copy" or "move") accept multiple arguments.
Comment 2 Robert Strahl 2013-05-14 17:49:15 UTC
Can we update the help message -- both to fix the error, and to clarify what the command does for non-technical users? I lack the understanding to do so myself.
Comment 3 Dawit Alemayehu 2013-06-02 16:15:09 UTC
This is indeed a mistake in the command like message. kde-open can only open a single file at a time like xdg-open ; so the message should have reflected that.
Comment 4 Dawit Alemayehu 2013-06-02 16:20:09 UTC
Fix: https://git.reviewboard.kde.org/r/110785/
Comment 5 Dawit Alemayehu 2013-06-04 03:41:57 UTC
Git commit 2e0479ed8ed34f89ac263fcf564f154d6856f282 by Dawit Alemayehu.
Committed on 02/06/2013 at 18:14.
Pushed by adawit into branch 'master'.

Fixed the command line help text for kde-open.

FIXED-IN: 4.11
REVIEW: 110785

M  +1    -1    kioclient/kioclient.cpp

http://commits.kde.org/kde-runtime/2e0479ed8ed34f89ac263fcf564f154d6856f282