Fixed the command line help text for kde-open.

FIXED-IN: 4.11
BUG: 319799
REVIEW: 110785